--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pinggu</title>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap');
       html, body {
           margin: 0;
           padding: 0;
