--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <body>
     <div id="app"></div>
     <script src="/dist/app.js"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%=REACT_APP_KAKAO_MAP_KEY%>"></script>
-
+    <!--<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%=REACT_APP_KAKAO_MAP_KEY%>"></script>-->
+  </body>
 </html>
+
