--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       }
 
     </style>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0cf6681225de1933cbe0a1387ee2dcf6"></script>
   </head>
   <body>
     <div id="app"></div>
     <script src="/dist/app.js"></script>
-    <!--<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%=REACT_APP_KAKAO_MAP_KEY%>"></script>-->
   </body>
 </html>
 
