[Modified] Post - Images&Modals

--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pinggu</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap');
-      html, body {
-          margin: 0;
-          padding: 0;
-          overflow: initial !important;
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: initial !important;
       }
       body {
-          font-size: 15px;
-          line-height: 1.46668;
-          font-weight: 400;
-          font-variant-ligatures: common-ligatures;
-          -moz-osx-font-smoothing: grayscale;
-          -webkit-font-smoothing: antialiased;
+        font-size: 15px;
+        line-height: 1.46668;
+        font-weight: 400;
+        font-variant-ligatures: common-ligatures;
+        -moz-osx-font-smoothing: grayscale;
+        -webkit-font-smoothing: antialiased;
       }
       * {
-          box-sizing: border-box;
+        box-sizing: border-box;
         margin: 0;
         padding: 0;
       }
@@ -34,13 +37,14 @@
         text-decoration: none;
         color: inherit;
       }
-
     </style>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0cf6681225de1933cbe0a1387ee2dcf6"></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0cf6681225de1933cbe0a1387ee2dcf6"
+    ></script>
   </head>
   <body>
     <div id="app"></div>
     <script src="/dist/app.js"></script>
   </body>
 </html>
-
