--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./dist/app.js"></script>
+    <script type="module" src="/dist/app.js"></script>
   </body>
 </html>
