[Modified] PostDetail comments

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         margin: 0;
         padding: 0;
         overflow: initial !important;
+        font-family: inherit;
       }
       body {
         font-size: 15px;
